--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 			<artifactId>resilience4j-spring-boot3</artifactId>
 			<version>${resilience4jVersion}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java-util</artifactId>
+			<version>3.25.3</version>
+		</dependency>
 	</dependencies>
 	<!-- Dependency Management -->
 	<dependencyManagement>
