--- a/pom.xml
+++ b/pom.xml
@@ -79,18 +79,17 @@
 			<artifactId>spring-cloud-gcp-starter-firestore</artifactId>
 			<version>${firestoreVersion}</version>
 		</dependency>
-		<!-- Spring Cloud GCP Cloud Events -->
-
 		<!-- Resilience4j -->
 		<dependency>
 			<groupId>io.github.resilience4j</groupId>
 			<artifactId>resilience4j-spring-boot3</artifactId>
 			<version>${resilience4jVersion}</version>
 		</dependency>
+		<!-- Cloud Events -->
 		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-java-util</artifactId>
-			<version>3.25.3</version>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloudevent-types</artifactId>
+			<version>0.17.1</version>
 		</dependency>
 	</dependencies>
 	<!-- Dependency Management -->
