--- a/pom.xml
+++ b/pom.xml
@@ -87,9 +87,9 @@
 		</dependency>
 		<!-- Cloud Events -->
 		<dependency>
-			<groupId>com.google.cloud</groupId>
-			<artifactId>google-cloudevent-types</artifactId>
-			<version>0.17.1</version>
+			<groupId>io.cloudevents</groupId>
+			<artifactId>cloudevents-spring</artifactId>
+			<version>2.5.0</version>
 		</dependency>
 	</dependencies>
 	<!-- Dependency Management -->
