--- a/pom.xml
+++ b/pom.xml
@@ -86,9 +86,31 @@
 			<version>${resilience4jVersion}</version>
 		</dependency>
 		<!-- Cloud Events -->
+		<!-- CloudEvents Core -->
+		<dependency>
+			<groupId>io.cloudevents</groupId>
+			<artifactId>cloudevents-core</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
+		<!-- CloudEvents HTTP Basic (necessario per HttpMessageFactory) -->
+		<dependency>
+			<groupId>io.cloudevents</groupId>
+			<artifactId>cloudevents-http-basic</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
+		<!-- CloudEvents Spring -->
 		<dependency>
 			<groupId>io.cloudevents</groupId>
 			<artifactId>cloudevents-spring</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
+		<!-- CloudEvents JSON Jackson -->
+		<dependency>
+			<groupId>io.cloudevents</groupId>
+			<artifactId>cloudevents-json-jackson</artifactId>
 			<version>2.5.0</version>
 		</dependency>
 	</dependencies>
