--- a/pom.xml
+++ b/pom.xml
@@ -85,33 +85,28 @@
 			<artifactId>resilience4j-spring-boot3</artifactId>
 			<version>${resilience4jVersion}</version>
 		</dependency>
-		<!-- Cloud Events -->
 		<!-- CloudEvents Core -->
 		<dependency>
 			<groupId>io.cloudevents</groupId>
 			<artifactId>cloudevents-core</artifactId>
 			<version>2.5.0</version>
 		</dependency>
-
-		<!-- CloudEvents HTTP Basic (necessario per HttpMessageFactory) -->
+		<!-- CloudEvents HTTP Basic -->
 		<dependency>
 			<groupId>io.cloudevents</groupId>
 			<artifactId>cloudevents-http-basic</artifactId>
 			<version>2.5.0</version>
 		</dependency>
-
 		<!-- CloudEvents Spring -->
 		<dependency>
 			<groupId>io.cloudevents</groupId>
 			<artifactId>cloudevents-spring</artifactId>
 			<version>2.5.0</version>
 		</dependency>
-
-		<!-- CloudEvents JSON Jackson -->
 		<dependency>
-			<groupId>io.cloudevents</groupId>
-			<artifactId>cloudevents-json-jackson</artifactId>
-			<version>2.5.0</version>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloudevent-types</artifactId>
+			<version>0.17.1</version>
 		</dependency>
 	</dependencies>
 	<!-- Dependency Management -->
